Added functionality to display all players

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,9 @@ nav a:hover {
 #inputDiv {
     display: none;
 }
+#player-input-div{
+    display: none;
+}
 
 #outputDiv {
     margin-top: 20px;
