--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Apple Chancery','cursive';
     color: whitesmoke;
 }
 nav {
