--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     margin: 0;
     padding: 0;
-    font-family: 'Apple Chancery','cursive';
+    font-family:  -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
     color: whitesmoke;
 }
 nav {
@@ -82,4 +82,22 @@ button{
 #players form input {
     height: 30px;
     width: 150px;
+}
+button { 
+    background-color: #405cf5;
+    border-radius: 6px;
+    border-width: 0;
+    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .1) 0 2px 5px 0, rgba(0, 0, 0, .07) 0 1px 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-family: -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
+    font-size: 100%;
+    height: 44px;
+    margin: 12px ;
+    padding: 0 25px;
+    position: relative;
+    text-align: center;
+    transform: translateZ(0);
+    transition: all .2s, box-shadow .08s ease-in;    
 }
