--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     font-family:  -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
     color: whitesmoke;
+    display: block;
 }
 nav {
     background-color: #333;
@@ -47,9 +48,9 @@ nav a:hover {
 #outputDiv {
     margin-top: 20px;
 }
-#teams {
-    /* background-color: #CD8B76; */
-
+#teams-output-div {
+    columns: 2;
+        
 }
 button{
     padding: 10px;
