--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     margin: 0;
     padding: 0;
-    font-family:  -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
+    font-family:   system-ui, "Segoe UI";
     color: whitesmoke;
     display: block;
 }
